trying to put icons into circular formation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/materialize/css/materialize.css" type="text/css" media="screen,projection"/>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=K2D'>
     <link rel="stylesheet" href="assets/styles.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -19,16 +20,19 @@
 
 
 
-<hr />
 
 <div class='circle-container'>
-    <a href='#' class='center'><img src='image.jpg'></a>
-    <a href='#' class='deg0'><img src='image.jpg'></a>
-    <a href='#' class='deg45'><img src='image.jpg'></a>
-    <a href='#' class='deg135'><img src='image.jpg'></a>
-    <a href='#' class='deg180'><img src='image.jpg'></a>
-    <a href='#' class='deg225'><img src='image.jpg'></a>
-    <a href='#' class='deg315'><img src='image.jpg'></a>
+    <!-- <a href='#' class='center'><img src='image.jpg'></a> -->
+    <!-- <a href='#' class='deg0'><img src='image.jpg'></a> -->
+    <a href='#' class='deg72'><div id="bookschat"><i class="fas fa-book"></i></div></a>
+
+    <a href='#' class='deg144'><div id="techchat"><i class="fas fa-laptop"></i></div></a>
+
+    <a href='#' class='deg216'><div id="musicchat"><i class="far fa-music"></i></div></a>
+
+    <a href='#' class='deg288'><div id="moviechat"><i class="fas fa-film"></i></div></a>
+
+    <a href='#' class='deg360'><div id="sportschat"><i class="far fa-futbol"></i></div></a>
 </div>
 
 
