getting these icons in a circle is an exercise in frustration

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <div class='circle-container'>
     <!-- <a href='#' class='center'><img src='image.jpg'></a> -->
     <!-- <a href='#' class='deg0'><img src='image.jpg'></a> -->
-    <a href='#' class='deg72'><div id="bookschat"><i class="fas fa-book"></i></div></a>
+    <div class='deg72' id="bookschat"><i class="fa fa-book"></i><br>[TRENDING TOPIC]<br>[5 people online]</div>
 
-    <a href='#' class='deg144'><div id="techchat"><i class="fas fa-laptop"></i></div></a>
+    <div class='deg144' id="techchat"><i class="fa fa-laptop"></i><br>[TRENDING TOPIC]<br>[5 people online]</div>
 
-    <a href='#' class='deg216'><div id="musicchat"><i class="far fa-music"></i></div></a>
+    <div class='deg216' id="musicchat"><i class="fa fa-music"></i><br>[TRENDING TOPIC]<br>[5 people online]</div>
 
-    <a href='#' class='deg288'><div id="moviechat"><i class="fas fa-film"></i></div></a>
+    <div class='deg288' id="moviechat"><i class="fa fa-film"></i><br>[TRENDING TOPIC]<br>[5 people online]</div>
 
-    <a href='#' class='deg360'><div id="sportschat"><i class="far fa-futbol"></i></div></a>
+    <div class='deg360' id="sportschat"><i class="fa fa-futbol"></i><br>[TRENDING TOPIC]<br>[5 people online]</div>
 </div>
 
 
