--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 </head>
 <body>
 
+    <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo"><img src="assets/logo - dancy.png" style="width: 75px"></a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">JavaScript</a></li>
+          </ul>
+        </div>
+      </nav>
 
 
     <img src="assets/logo - dancy.png" alt="chatr" class="center"/>
